--- a/color.ini
+++ b/color.ini
@@ -2,9 +2,9 @@
 
 [main]
 ; text               = Main text, playlist names in main field, name of playlist selected in sidebar, headings
-text               = FFFFFF
+text               = 000000
 ; subtext            = Text in main buttons in sidebar, playlist names in sidebar, artist names, and mini infos
-subtext            = DEDEDE
+subtext            = 000000
 ; main               = Main field background
 main               = c0c0c0
 ; sidebar            = Sidebar background
